   log4j output is done through regular Logger objects. However, in
   configuration file in properties format, the log4j.debug property will
   cause PropertyConfigurator to *temporarily* output logs generated
   during the configuration process. This is very similar to the way the
   debug attribute works in configuration files in XML format. [*]

 - Fixed Bugzilla 14551, misplaces sample.xml links in JavaDocs.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=14551 [*]

 - Closed Bugzilla 34162, log4j-db.jar built empty, which had been
   previously fixed.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=34162 [*]

 - Closed Bugzilla 34163, missing chainsaw module in xdocs/install-chainsaw.xml,
   which had been previously fixed.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=34163 [*]

 - Fixed Bugzilla 30853: made System.out printing conditional upon
   log4j.debug system property. [*]
 
 - Fixed Bugzilla 30623, better JavaDoc for DailyRollingFileAppender#getDatePattern.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=30623 [*]

 - Fixed Bugzilla 34747: DBAppender reused Statement objects inappropriately.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=34747 [*]
 
 - Fixed Bugzilla 35324: VectorWriter#println NPE on null argument.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=35324 [*]

  
  January 20th, 2005
 - Release of version 1.3alpha-6

 - Fixed involuntary omission of DOMConfigrator (deprecated) in log4j-VERSION.jar.
 - Added missing files in log4-oro.jar.
 - The lengthy system property "log4j.repositorySelectorClass" was renamed as 
   "log4j.repositorySelector".
  
  January 19th, 2005
 - Release of version 1.3alpha-5

 - Universal and Generic Logging Interface (UGLI) is now part of log4j. 
   UGLI allows variation in the logging API implementattion in a simple and 
   robust way. Log4j directly supports the interfaces defined by UGLI. 
   For more information see http://logging.apache.org/log4j/docs/ugli.html [*]
   