@@ -395,4 +395,28 @@ public class JMSAppender extends AppenderSkeleton {
   public void setLocationInfo(boolean locationInfo) {
     this.locationInfo = locationInfo;
   }
+
+  /**
+   * Returns the TopicConnection used for this appender.  Only valid after
+   * activateOptions() method has been invoked.
+   */
+  protected TopicConnection  getTopicConnection() {
+    return topicConnection;
+  }
+
+  /**
+   * Returns the TopicSession used for this appender.  Only valid after
+   * activateOptions() method has been invoked.
+   */
+  protected TopicSession  getTopicSession() {
+    return topicSession;
+  }
+
+  /**
+   * Returns the TopicPublisher used for this appender.  Only valid after
+   * activateOptions() method has been invoked.
+   */
+  protected TopicPublisher  getTopicPublisher() {
+    return topicPublisher;
+  }
 }
